--- a/DotNetHowTo/DotNetHowTo/appsettings.json
+++ b/DotNetHowTo/DotNetHowTo/appsettings.json
@@ -1,5 +1,6 @@
 ﻿{
-    "SearchServiceName": "Put your search service name here",
-    "SearchServiceAdminApiKey": "Put your primary or secondary API key here",
-    "SearchServiceQueryApiKey": "Put your query API key here"
+  "SearchServiceName": "[Put your search service name here]",
+  "SearchIndexName": "hotels",
+  "SearchServiceAdminApiKey": "[Put your primary or secondary Admin API key here]",
+  "SearchServiceQueryApiKey": "[Put your primary or secondary Query API key here]"
 }
