--- a/DotNetHowToEncryptionUsingCMK/DotNetHowToEncryptionUsingCMK/appsettings.json
+++ b/DotNetHowToEncryptionUsingCMK/DotNetHowToEncryptionUsingCMK/appsettings.json
@@ -2,7 +2,7 @@
   "SearchServiceName": "Put your search service name here",
   "SearchServiceAdminApiKey": "Put your primary or secondary API key here",
   "SearchServiceQueryApiKey": "Put your query API key here",
-  "AzureKeyVaultKeyUrl": "Put your Azure Key vault key URL to be used for encryption here. Expected format: 'https://<key-vault-name>.vault.azure.net/keys/<key-name>/<key-version>'",
+  "AzureKeyVaultKeyIdentifier": "Put your Azure Key vault key URL to be used for encryption here. Expected format: 'https://<key-vault-name>.vault.azure.net/keys/<key-name>/<key-version>'",
   "AzureActiveDirectoryApplicationId": "(optional): AAD Application ID that was granted the required access permissions to the Azure Key Vault that is to be used when encrypting your data at rest. The Application ID should not be confused with the Object ID for your AAD Application.",
   "AzureActiveDirectoryApplicationSecret": "(optional): The authentication key of the specified AAD application."
 }
