--- a/DotNetHowToAutocomplete/DotNetHowToAutocomplete/packages.config
+++ b/DotNetHowToAutocomplete/DotNetHowToAutocomplete/packages.config
@@ -15,19 +15,19 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
-  <package id="Microsoft.Azure.Search" version="6.0.0-preview" targetFramework="net461" />
-  <package id="Microsoft.Azure.Search.Common" version="6.0.0-preview" targetFramework="net461" />
-  <package id="Microsoft.Azure.Search.Data" version="6.0.0-preview" targetFramework="net461" />
-  <package id="Microsoft.Azure.Search.Service" version="6.0.0-preview" targetFramework="net461" />
+  <package id="Microsoft.Azure.Search" version="10.1.0" targetFramework="net461" />
+  <package id="Microsoft.Azure.Search.Common" version="10.1.0" targetFramework="net461" />
+  <package id="Microsoft.Azure.Search.Data" version="10.1.0" targetFramework="net461" />
+  <package id="Microsoft.Azure.Search.Service" version="10.1.0" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net461" developmentDependency="true" />
-  <package id="Microsoft.Rest.ClientRuntime" version="2.3.11" targetFramework="net461" />
-  <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.12" targetFramework="net461" />
-  <package id="Microsoft.Spatial" version="7.2.0" targetFramework="net461" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.3.20" targetFramework="net461" />
+  <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.18" targetFramework="net461" />
+  <package id="Microsoft.Spatial" version="7.5.3" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
 </packages>
