--- a/DotNetHowToEncryptionUsingCMK/DotNetHowToEncryptionUsingCMK/DotNetHowToEncryptionUsingCMK.csproj
+++ b/DotNetHowToEncryptionUsingCMK/DotNetHowToEncryptionUsingCMK/DotNetHowToEncryptionUsingCMK.csproj
@@ -6,8 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.Search" Version="8.0.0-preview" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Azure.KeyVault" Version="3.0.5" />
+    <PackageReference Include="Microsoft.Azure.KeyVault.Extensions" Version="3.0.5" />
+    <PackageReference Include="Microsoft.Azure.Search" Version="10.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.1" />
   </ItemGroup>
 
   <ItemGroup>
