--- a/DotNetHowToEncryptionUsingCMK/DotNetHowToEncryptionUsingCMK/DotNetHowToEncryptionUsingCMK.csproj
+++ b/DotNetHowToEncryptionUsingCMK/DotNetHowToEncryptionUsingCMK/DotNetHowToEncryptionUsingCMK.csproj
@@ -6,8 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.Search" Version="8.0.0-preview" />
+    <PackageReference Include="Azure.Search.Documents" Version="11.1.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Spatial" Version="7.7.1" />
   </ItemGroup>
 
   <ItemGroup>
