--- a/DotNetHowToEncryptionUsingCMK/DotNetHowToEncryptionUsingCMK/appsettings.json
+++ b/DotNetHowToEncryptionUsingCMK/DotNetHowToEncryptionUsingCMK/appsettings.json
@@ -1,8 +1,8 @@
 ﻿{
-  "SearchServiceName": "Put your search service name here",
-  "SearchServiceAdminApiKey": "Put your primary or secondary API key here",
-  "SearchServiceQueryApiKey": "Put your query API key here",
-  "AzureKeyVaultKeyIdentifier": "Put your Azure Key vault key URL to be used for encryption here. Expected format: 'https://<key-vault-name>.vault.azure.net/keys/<key-name>/<key-version>'",
-  "AzureActiveDirectoryApplicationId": "(optional): AAD Application ID that was granted the required access permissions to the Azure Key Vault that is to be used when encrypting your data at rest. The Application ID should not be confused with the Object ID for your AAD Application.",
-  "AzureActiveDirectoryApplicationSecret": "(optional): The authentication key of the specified AAD application."
+  "SearchServiceEndpoint": "Search service URL goes here",
+  "SearchServiceAdminApiKey": "Search service Admin API key goes here",
+  "SearchServiceQueryApiKey": "Search service query API key goes here",
+  "AzureKeyVaultKeyIdentifier": "Azure Key Vault key URL goes here. Expected format: 'https://<key-vault-name>.vault.azure.net/keys/<key-name>/<key-version>'",
+  "AzureActiveDirectoryApplicationId": "Azure AD Application ID (not to be confused with Object ID or Tenant ID). Make sure this application has an Access Policy set up in Azure Key Vault.",
+  "AzureActiveDirectoryApplicationSecret": "Azure AD authentication key found in Certificates and Secrets."
 }
